--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <div id="app">
-    {{ message }}
+    {{date|formate('jjj')}}
+    <hr> {{false?message:'asd'}}
+    <br/> {{ message }}
     <span :title="message">
         <!-- title 和 Vue 实例的 message 属性保持一致” -->
         鼠标悬停几秒钟查看此处动态绑定的提示信息！
@@ -20,7 +22,7 @@
         </li>
     </ol>
     <hr>
-    <button v-on:click="reverseMessage">逆转消息</button>
+    <button @click="reverseMessage">逆转消息</button>
     <input v-model="message">
     <hr>
     <ol>
@@ -42,9 +44,13 @@
             props: ['todo'],
             template: '<li>{{ todo.text }}</li>'
         })
+        let plusZero = function (value) {
+            return value < 10 ? '0' + value : value
+        };
         var app = new Vue({
             el: '#app',
             data: {
+                date: new Date(),
                 message: 'Hello Vue! ' + '页面加载于 ' + new Date().toLocaleString(),
                 seen: true,
                 todos: [
@@ -58,10 +64,32 @@
                     { id: 2, text: '随便其它什么人吃的东西' }
                 ]
             },
+            filters: {
+                formate: function (value, splitStr = '-') {
+                    let date = new Date(value);
+                    let year = date.getFullYear();
+                    let month = plusZero(date.getMonth() + 1);
+                    let day = plusZero(date.getDate());
+                    let hour = plusZero(date.getHours());
+                    let min = plusZero(date.getMinutes());
+                    let sec = plusZero(date.getSeconds());
+                    return [year, month, day, hour, min, sec].join(splitStr);
+                }
+            },
             methods: {
                 reverseMessage: function () {
-                    this.message = this.message.split('').reverse().join('')
-                }
+                    this.message = this.message.split('').reverse().join('');
+                },
+
+            },
+            mounted: function () {
+                this.timer = setInterval(() => {
+                    this.message = 'Hello Vue! ' + '页面加载于 ' + new Date().toLocaleString();
+                }, 1000)
+            },
+            beforeDestroy: function () {
+                this.timer && clearInterval(this.timer);
+                debugger
             }
         });
 
