--- a/basic/director.html
+++ b/basic/director.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>内置指令</title>
+    <title>内置指令 && 自定义指令</title>
 </head>
 <style>
     [v-cloak] {
